fix logo on tablet

--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -30,3 +30,11 @@
     display: flex;
   }
 }
+
+@media only screen and (min-width: 640px) {
+  .flexRowContent--footer-mobile, .flexRowContent--footer-logo{
+    flex-direction: column;
+    align-items: center;
+
+  }
+}
